tests/baselines/reference/exponentiationOperatorWithNullValueAndInvalidOperands.errors.txt
exponentiationOperatorWithNullValueAndInvalidOperands.ts(9,12): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(9,20): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(10,12): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(10,20): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(11,12): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(11,20): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(13,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(13,17): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(14,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(14,17): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(15,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(15,17): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(17,12): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(17,20): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(18,12): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(18,20): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(19,12): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(19,20): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(21,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(21,20): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(22,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(22,18): error TS18050: The value 'null' cannot be used here.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(23,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
exponentiationOperatorWithNullValueAndInvalidOperands.ts(23,18): error TS18050: The value 'null' cannot be used here.


==== exponentiationOperatorWithNullValueAndInvalidOperands.ts (24 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the
    // other operand.
    
    var a: boolean;
    var b: string;
    var c: Object;
    
    // operator **
    var r1a1 = null ** a;
               ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                       ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    var r1a2 = null ** b;
               ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                       ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    var r1a3 = null ** c;
               ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                       ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    
    var r1b1 = a ** null;
               ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r1b2 = b ** null;
               ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r1b3 = c ** null;
               ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    
    var r1c1 = null ** true;
               ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                       ~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    var r1c2 = null ** '';
               ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                       ~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    var r1c3 = null ** {};
               ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                       ~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    
    var r1d1 = true ** null;
               ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                       ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r1d2 = '' ** null;
               ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                     ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r1d3 = {} ** null;
               ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                     ~~~~
!!! error TS18050: The value 'null' cannot be used here.